Fix for default  logo

--- a/BLAZAM/Shared/Email/Base/EmailHeaderIcon.razor
+++ b/BLAZAM/Shared/Email/Base/EmailHeaderIcon.razor
@@ -37,8 +37,8 @@
     {
         base.OnInitialized();
 
-        if (DatabaseCache.AppIcon != null)
-            appIconBytes = DatabaseCache.AppIcon.ReizeRawImage(250);
+        if (StaticAssets.AppIcon() != null)
+            appIconBytes = StaticAssets.AppIcon(250);
 
     }
 }
