--- a/BLAZAM/Shared/UI/Settings/ManualApplicationUpdater.razor
+++ b/BLAZAM/Shared/UI/Settings/ManualApplicationUpdater.razor
@@ -19,7 +19,7 @@
 
 }
 
-<LoadingIndicator Height="Height.Is100" Visible=LoadingData>
+<LoadingIndicator Visible=LoadingData>
     @{
         if (LatestAvailableVersion != null)
         {
