Encrypt Passwords in DB

--- a/BLAZAM/Pages/Login.razor
+++ b/BLAZAM/Pages/Login.razor
@@ -21,7 +21,7 @@
 
 
 <Div class="brand-icon">
-    <img src="@StaticAssets.ApplicationIcon" />
+    <img src="@StaticAssets.ApplicationIconUri" />
 
 </Div>
 <Form class="login-form" method="post" action="/signin" TextAlignment="TextAlignment.Center">
