--- a/BLAZAM/Shared/Navs/NavMenu.razor
+++ b/BLAZAM/Shared/Navs/NavMenu.razor
@@ -15,7 +15,7 @@
     <BarBrand>
         <BarItem>
             <BarLink TextColor=TextColor.Light To="/home">
-                <Image class="app-icon" src="@StaticAssets.ApplicationIcon" />
+                <Image class="app-icon" src="@StaticAssets.ApplicationIconUri" />
                 <Div Margin=Margin.Is2.OnX TextAlignment="TextAlignment.Center">
                     @DatabaseCache.ApplicationSettings?.AppAbbreviation
                 </Div>
