--- a/BLAZAM/Shared/UI/Settings/ApplicationSettings.razor
+++ b/BLAZAM/Shared/UI/Settings/ApplicationSettings.razor
@@ -7,13 +7,16 @@
 
 
 <LoadingIndicator Height="Height.Is100" Visible=LoadingData>
+    <Row Padding="Padding.Is1.OnMobile.Is2.OnTablet.Is3.OnDesktop.Is4.OnWidescreen.Is5.OnFullHD">
+        <Heading>@SettingsLocalization["Application Settings"]</Heading>
+                    <Form @onsubmit="Save">
 
-    <Validations Mode="ValidationMode.Auto" Model="@settings" StatusChanged="OnValidation">
-        <Row Margin=Margin.Is3>
+        <Validations Mode="ValidationMode.Auto" Model="@settings" StatusChanged="OnValidation">
+
             <Validation>
-                <Field Horizontal>
-                    <FieldLabel ColumnSize="ColumnSize.Is2.OnDesktop">@SettingsLocalization["Application Name"]</FieldLabel>
-                    <FieldBody ColumnSize="ColumnSize.Is10">
+                <SettingsField>
+                    <FieldLabel>@SettingsLocalization["Application Name"]</FieldLabel>
+                    <FieldBody>
                         <TextEdit Placeholder="Give you're application a display name" @bind-Text="@settings.AppName">
                             <Feedback>
                                 <ValidationError />
@@ -23,101 +26,93 @@
                             </Feedback>
                         </TextEdit>
                     </FieldBody>
-                </Field>
+                </SettingsField>
             </Validation>
-        </Row>
-        <Row Margin=Margin.Is3>
+
             <Validation>
-                <Field Horizontal>
-                    <FieldLabel ColumnSize="ColumnSize.Is2.OnDesktop">@SettingsLocalization["Homepage Message"]</FieldLabel>
-                    <FieldBody ColumnSize="ColumnSize.Is10">
+                <SettingsField>
+                    <FieldLabel>@SettingsLocalization["Homepage Message"]</FieldLabel>
+                    <FieldBody>
                         <MemoEdit Placeholder="Place a custom welcome message for your users on the dashboard" @bind-Text="@settings.MOTD">
                             <Feedback>
                                 <ValidationError />
                             </Feedback>
                         </MemoEdit>
                     </FieldBody>
-                </Field>
+                </SettingsField>
 
             </Validation>
-        </Row>
 
-        <Row Margin=Margin.Is3>
             <Validation>
-                <Field Horizontal>
-                    <FieldLabel ColumnSize="ColumnSize.Is2.OnDesktop">@SettingsLocalization["Force Https"]</FieldLabel>
-                    <FieldBody ColumnSize="ColumnSize.Is10">
+                <SettingsField>
+                    <FieldLabel>@SettingsLocalization["Force Https"]</FieldLabel>
+                    <FieldBody>
                         <Switch TValue="bool" @bind-Checked="@settings.ForceHTTPS" />
                     </FieldBody>
-                </Field>
+                </SettingsField>
 
             </Validation>
-        </Row>
-        <Row Margin=Margin.Is3>
             <Validation>
-                <Field Horizontal>
-                    <FieldLabel ColumnSize="ColumnSize.Is2.OnDesktop">@SettingsLocalization["User Helpdesk URL"]</FieldLabel>
-                    <FieldBody ColumnSize="ColumnSize.Is10">
+                <SettingsField>
+                    <FieldLabel>@SettingsLocalization["User Helpdesk URL"]</FieldLabel>
+                    <FieldBody>
                         <TextEdit Placeholder="If not provided, support links will be disabled" @bind-Text="@settings.UserHelpdeskURL">
                             <Feedback>
                                 <ValidationError />
                             </Feedback>
                         </TextEdit>
                     </FieldBody>
-                </Field>
+                </SettingsField>
 
             </Validation>
-        </Row>
 
 
-        <Row Margin=Margin.Is3>
-            <Field Horizontal>
+            <SettingsField>
 
-                <FieldLabel ColumnSize="ColumnSize.Is2.OnDesktop">
+                <FieldLabel>
                     @SettingsLocalization["Branding Icon"]
                     @if (settings != null && settings.AppIcon != null && settings.AppIcon.Length > 0)
                     {
-                        <img class="app-icon" src="@StaticAssets.ApplicationIcon" />
+                        <Image Class="app-icon" Source="@StaticAssets.ApplicationIconUri" />
+                        <Tooltip Text="Remove custom icon">
+                            <AppCloseButton Clicked="@(()=>{settings.AppIcon=null;})" />
+                        </Tooltip>
                     }
                 </FieldLabel>
-                <FieldBody ColumnSize="ColumnSize.Is8">
-
-                    <Blazorise.FilePicker Upload="LoadIcon" />
-
+                <FieldBody>
+                    <Blazorise.FilePicker AutoReset Upload="LoadIcon" />
                 </FieldBody>
-                <FieldBody ColumnSize="ColumnSize.Is2">
-                    <Tooltip Text="Remove custom icon">
-                        <AppCloseButton Clicked="@(()=>{settings.AppIcon=null;})" />
-                    </Tooltip>
-                </FieldBody>
-            </Field>
+            </SettingsField>
 
-        </Row>
 
-        <Row Margin=Margin.Is3>
-                <Validation Validator="AppValidationRule.IsFqdn">
-                    <Field Horizontal>
-                        <FieldLabel ColumnSize="ColumnSize.Is2.OnDesktop">@SettingsLocalization["Website FQDN"]</FieldLabel>
-                        <FieldHelp>Enter the fqdn of the published website. (eg: blazam.mydomain.company)</FieldHelp>
-                        <FieldBody ColumnSize="ColumnSize.Is10">
-                            <TextEdit Placeholder="Enter the web address" @bind-Text="@settings.AppFQDN">
-                                <Feedback>
-                                    <ValidationError />
-                                    <ValidationNone>
-                                        You must give the Web Application a FQDN to use auto updates.
-                                    </ValidationNone>
-                                </Feedback>
-                            </TextEdit>
-                        </FieldBody>
-                    </Field>
-                </Validation>
-            </Row>
 
-   
-        <Row Margin=Margin.Is3>
-            <Button Disabled="saveDisabled" @onclick="Save" Color="Color.Success">Save Changes</Button>
-        </Row>
-    </Validations>
+            <Validation Validator="AppValidationRule.IsFqdn">
+                <SettingsField>
+                    <FieldLabel>@SettingsLocalization["Website FQDN"]</FieldLabel>
+                    <FieldHelp>Enter the fqdn of the published website. (eg: blazam.mydomain.company)</FieldHelp>
+                    <FieldBody>
+                        <TextEdit Placeholder="Enter the web address" @bind-Text="@settings.AppFQDN">
+                            <Feedback>
+                                <ValidationError />
+                                <ValidationNone>
+                                    You must give the Web Application a FQDN to use auto updates.
+                                </ValidationNone>
+                            </Feedback>
+                        </TextEdit>
+                    </FieldBody>
+                </SettingsField>
+            </Validation>
+
+                <SettingsField>
+                    <FieldBody>
+                        <Button Disabled="saveDisabled" Type="ButtonType.Submit" Color="Color.Success">Save Changes</Button>
+                    </FieldBody>
+                </SettingsField>
+
+
+        </Validations>
+        </Form>
+    </Row>
 </LoadingIndicator>
 @code {
     AppSettings settings = new AppSettings();
