--- a/BLAZAM/Shared/UI/Settings/AuthenticationSetting.razor
+++ b/BLAZAM/Shared/UI/Settings/AuthenticationSetting.razor
@@ -1,90 +1,99 @@
-﻿@using Microsoft.EntityFrameworkCore;
-@using BLAZAM.Common.Data.ActiveDirectory.Interfaces;
-@using BLAZAM.Server.Data.Services.Email;
+﻿
 
 @inject IDbContextFactory<DatabaseContext> DbFactory
 @inherits ValidatedForm
 
 
-<h3>@SettingsLocalization["Authentication Settings"]</h3>
 
 <LoadingIndicator Height="Height.Is100" Visible=LoadingData>
-    <Validations Mode="ValidationMode.Auto" Model="@settings" StatusChanged="OnValidation">
-        <Validation>
-            <Field Horizontal>
-                <FieldLabel ColumnSize="ColumnSize.Is2.OnDesktop">@SettingsLocalization["Website Name"]</FieldLabel>
-                <FieldBody ColumnSize="ColumnSize.Is10">
-                    <TextEdit Role="TextRole.Password" Placeholder="Give you\'re application a display name" @bind-Text="@settings.AdminPassword">
-                        <Feedback>
-                            <ValidationError />
-                        </Feedback>
-                    </TextEdit>
+    <Row Padding="Padding.Is1.OnMobile.Is2.OnTablet.Is3.OnDesktop.Is4.OnWidescreen.Is5.OnFullHD">
+        <Heading>@SettingsLocalization["Authentication Settings"]</Heading>
+        <Form @onsubmit=Save>
+        <Validations Mode="ValidationMode.Auto" Model="@settings" StatusChanged="OnValidation">
+            
+            <Validation Validator="AppValidationRule.IsNotEmpty">
+                <SettingsField >
+                    <FieldLabel>@SettingsLocalization["Admin Password"]</FieldLabel>
+                    <FieldBody>
+                        <TextEdit Role="TextRole.Password" @bind-Text="settings.AdminPassword">
+                            <Feedback>
+                                <ValidationError />
+                            </Feedback>
+                        </TextEdit>
+                    </FieldBody>
+                </SettingsField>
+            </Validation>
+            <Validation>
+
+                <SettingsField>
+                    <FieldLabel>@SettingsLocalization["Session Timeout"]</FieldLabel>
+                    <FieldHelp>Time in minutes</FieldHelp>
+                    <FieldBody>
+                        <NumericPicker  TValue="int?" @bind-Value="@settings.SessionTimeout">
+                           
+                            <Feedback>
+                                <ValidationError />
+                            </Feedback>
+                        </NumericPicker>
+                       
+
+                    </FieldBody>
+                </SettingsField>
+            </Validation>
+
+            <Text>Duo Security MFA (optional)</Text>
+                <hr/>
+                <Validation>
+                    <SettingsField>
+                        <FieldLabel>Duo ClientID</FieldLabel>
+                        <FieldBody>
+                            <TextEdit Role="TextRole.Password" @bind-Text="@settings.DuoClientId">
+                                <Feedback>
+                                    <ValidationError />
+                                </Feedback>
+                            </TextEdit>
+                        </FieldBody>
+                    </SettingsField>
+                </Validation>
+                <Validation>
+                    <SettingsField>
+                        <FieldLabel>Duo ClientSecret</FieldLabel>
+                        <FieldBody>
+                            <TextEdit Role="TextRole.Password" @bind-Text="@settings.DuoClientSecret">
+                                <Feedback>
+                                    <ValidationError />
+                                </Feedback>
+                            </TextEdit>
+                        </FieldBody>
+                    </SettingsField>
+                </Validation>
+                <Validation>
+                    <SettingsField>
+                        <FieldLabel>Duo ApiHost</FieldLabel>
+                        <FieldBody>
+                            <TextEdit Role="TextRole.Password" @bind-Text="@settings.DuoApiHost">
+                                <Feedback>
+                                    <ValidationError />
+                                </Feedback>
+                            </TextEdit>
+                        </FieldBody>
+                    </SettingsField>
+                </Validation>
+            <SettingsField>
+                <FieldBody>
+                    <Button Disabled="saveDisabled" Type="ButtonType.Submit" Color="Color.Success">Save Changes</Button>
                 </FieldBody>
-            </Field>
-        </Validation>
-        <Validation>
-
-            <Field Horizontal>
-                <FieldLabel ColumnSize="ColumnSize.Is2.OnDesktop">@SettingsLocalization["Session Timeout"]</FieldLabel>
-                <FieldBody ColumnSize="ColumnSize.Is10">
-                    <NumericPicker TValue="int?" @bind-Value="@settings.SessionTimeout">
-
-                        <Feedback>
-                            <ValidationError />
-                        </Feedback>
-                    </NumericPicker>
-                    <p>@settings.SessionTimeout.ToString() + " Minutes"</p>
-
-                </FieldBody>
-            </Field>
-        </Validation>
-
-        <Section Title="Duo Security MFA (optional)">
-            <Validation>
-                <Field Horizontal>
-                    <FieldLabel ColumnSize="ColumnSize.Is2.OnDesktop">Duo ClientID</FieldLabel>
-                    <FieldBody ColumnSize="ColumnSize.Is10">
-                        <TextEdit Role="TextRole.Password" @bind-Text="@settings.DuoClientId">
-                            <Feedback>
-                                <ValidationError />
-                            </Feedback>
-                        </TextEdit>
-                    </FieldBody>
-                </Field>
-            </Validation>
-            <Validation>
-                <Field Horizontal>
-                    <FieldLabel ColumnSize="ColumnSize.Is2.OnDesktop">Duo ClientSecret</FieldLabel>
-                    <FieldBody ColumnSize="ColumnSize.Is10">
-                        <TextEdit Role="TextRole.Password" @bind-Text="@settings.DuoClientSecret">
-                            <Feedback>
-                                <ValidationError />
-                            </Feedback>
-                        </TextEdit>
-                    </FieldBody>
-                </Field>
-            </Validation>
-            <Validation>
-                <Field Horizontal>
-                    <FieldLabel ColumnSize="ColumnSize.Is2.OnDesktop">Duo ApiHost</FieldLabel>
-                    <FieldBody ColumnSize="ColumnSize.Is10">
-                        <TextEdit Role="TextRole.Password" @bind-Text="@settings.DuoApiHost">
-                            <Feedback>
-                                <ValidationError />
-                            </Feedback>
-                        </TextEdit>
-                    </FieldBody>
-                </Field>
-            </Validation>
-        </Section>
-        <Button Disabled="saveDisabled" @onclick="Save" Color="Color.Success">Save Changes</Button>
+            </SettingsField>
 
 
 
-    </Validations>
+        </Validations>
+        </Form>
+    </Row>
 </LoadingIndicator>
 @code {
     AuthenticationSettings settings = new AuthenticationSettings();
+    string adminPasswordInDb;
     string _timeoutString = "Loading...";
     protected override async Task OnInitializedAsync()
     {
@@ -95,6 +104,7 @@
         {
             settings = Context.AuthenticationSettings.FirstOrDefault();
             _timeoutString = settings.SessionTimeout.ToString() + " Minutes";
+            adminPasswordInDb = settings?.AdminPassword;
             LoadingData = false;
             InvokeAsync(StateHasChanged);
         });
@@ -105,5 +115,13 @@
         InvokeAsync(StateHasChanged);
 
     }
-
+    protected override void Save()
+    {
+        if (!settings.AdminPassword.Equals(adminPasswordInDb))
+        {
+            settings.AdminPassword = EncryptionService.EncryptObject(settings.AdminPassword);
+            adminPasswordInDb = settings.AdminPassword;
+        }
+        base.Save();
+    }
 }
