--- a/BLAZAM/Shared/UI/Settings/UpdateSettings.razor
+++ b/BLAZAM/Shared/UI/Settings/UpdateSettings.razor
@@ -7,74 +7,71 @@
 
 
 <LoadingIndicator Height="Height.Is100" Visible=LoadingData>
+    <Row Padding="Padding.Is1.OnMobile.Is2.OnTablet.Is3.OnDesktop.Is4.OnWidescreen.Is5.OnFullHD">
+        <Heading>@SettingsLocalization["Update Settings"]</Heading>
+        <Form @onsubmit="Save">
 
-    <Validations Mode="ValidationMode.Auto" Model="@settings" StatusChanged="OnValidation">
-       
-        <Row Margin=Margin.Is3>
-            <Validation>
-                <Field Horizontal ColumnSize="ColumnSize.Is6.OnDesktop">
-                    <FieldLabel ColumnSize="ColumnSize.Is6.OnDesktop">@SettingsLocalization["Allow Auto Update"]</FieldLabel>
-                    <FieldBody ColumnSize="ColumnSize.Is6">
-                        <Switch TValue="bool" @bind-Checked="@settings.AutoUpdate" />
-                    </FieldBody>
-                </Field>
+            <Validations Mode="ValidationMode.Auto" Model="@settings" StatusChanged="OnValidation">
 
-            </Validation>
+                <Validation>
+                    <SettingsField>
+                        <FieldLabel>@SettingsLocalization["Allow Auto Update"]</FieldLabel>
+                        <FieldBody>
+                            <Switch TValue="bool" @bind-Checked="@settings.AutoUpdate" />
+                        </FieldBody>
+                    </SettingsField>
 
-           
+                </Validation>
 
 
-        </Row>
-        @if (settings.AutoUpdate)
-        {
-            <Row Margin=Margin.Is3>
-                <Field Horizontal ColumnSize="ColumnSize.Is6.OnDesktop" hidden="@(!settings.AutoUpdate)">
-                    <FieldLabel>@SettingsLocalization["Auto Update Time"]</FieldLabel>
-                    <FieldHelp>The time of each day to automatically apply an update.</FieldHelp>
+                @if (settings.AutoUpdate)
+                {
+
+                    <SettingsField>
+                        <FieldLabel>@SettingsLocalization["Auto Update Time"]</FieldLabel>
+                        <FieldHelp>The time of each day to automatically apply an update.</FieldHelp>
+                        <FieldBody>
+                            <TimePicker TValue="TimeSpan" @bind-Time="@settings.AutoUpdateTime">
+
+                            </TimePicker>
+                        </FieldBody>
+                    </SettingsField>
+
+                    <SettingsField>
+                        <FieldLabel>@SettingsLocalization["Update Branch"]</FieldLabel>
+                        <FieldHelp>Choosing the Dev branch may result in application breakage</FieldHelp>
+                        <FieldBody>
+                            <Select TValue="string" @bind-SelectedValue="@settings.UpdateBranch">
+                                <SelectItem Value=@("Stable")>Stable</SelectItem>
+                                <SelectItem Value=@("Nightly")>Nightly</SelectItem>
+                                <SelectItem Value=@("Dev")>Dev</SelectItem>
+                            </Select>
+                        </FieldBody>
+                    </SettingsField>
+                }
+
+
+                <SettingsField>
+
+                    <FieldLabel>
+                        @SettingsLocalization["Update"]
+                    </FieldLabel>
                     <FieldBody>
-                        <TimePicker TValue="TimeSpan" @bind-Time="@settings.AutoUpdateTime">
 
-                        </TimePicker>
+                        <ManualApplicationUpdater />
+
                     </FieldBody>
-                </Field>
-            </Row>
+                </SettingsField>
 
-            <Row Margin=Margin.Is3>
-                <Field Horizontal ColumnSize="ColumnSize.Is6.OnDesktop" hidden="@(!settings.AutoUpdate)">
-                    <FieldLabel>@SettingsLocalization["Update Branch"]</FieldLabel>
-                    <FieldHelp>Choosing the Dev branch may result in application breakage</FieldHelp>
+
+                <SettingsField>
                     <FieldBody>
-                        <Select TValue="string" @bind-SelectedValue="@settings.UpdateBranch">
-                            <SelectItem Value=@("Stable")>Stable</SelectItem>
-                            <SelectItem Value=@("Nightly")>Nightly</SelectItem>
-                            <SelectItem Value=@("Dev")>Dev</SelectItem>
-                        </Select>
+                        <Button Disabled="saveDisabled" Type="ButtonType.Submit" Color="Color.Success">Save Changes</Button>
                     </FieldBody>
-                </Field>
-            </Row>
-        }
-       
-        
-        <Row Margin=Margin.Is3>
-            <Field Horizontal>
-
-                <FieldLabel ColumnSize="ColumnSize.Is2.OnDesktop">
-                    @SettingsLocalization["Update"]
-                </FieldLabel>
-                <FieldBody ColumnSize="ColumnSize.Is10">
-
-                    <ManualApplicationUpdater />
-
-                </FieldBody>
-            </Field>
-
-        </Row>
-
-
-        <Row Margin=Margin.Is3>
-            <Button Disabled="saveDisabled" @onclick="Save" Color="Color.Success">Save Changes</Button>
-        </Row>
-    </Validations>
+                </SettingsField>
+            </Validations>
+        </Form>
+    </Row>
 </LoadingIndicator>
 @code {
     AppSettings settings = new AppSettings();
