Demo mode functional

--- a/BLAZAM/Shared/UI/Settings/SystemSettings.razor
+++ b/BLAZAM/Shared/UI/Settings/SystemSettings.razor
@@ -17,7 +17,7 @@
         </SettingsField>
         <SettingsField>
             <FieldBody>
-                <Button Disabled="saveDisabled" Type="ButtonType.Submit" Color="Color.Success">Save Changes</Button>
+                <Button Type="ButtonType.Submit" Color="Color.Success">Save Changes</Button>
             </FieldBody>
         </SettingsField>
     </Form>
