--- a/BLAZAM/_Imports.razor
+++ b/BLAZAM/_Imports.razor
@@ -39,6 +39,8 @@
 @using BLAZAM.Common
 @using BLAZAM.Common.Helpers
 @using BLAZAM.Common.Data
+@using BLAZAM.Common.Data.FileSystem;
+
 @using BLAZAM.Common.Exceptions
 @using BLAZAM.Common.Data.Database
 @using BLAZAM.Common.Data.Services
